--- a/package.json
+++ b/package.json
@@ -4,7 +4,11 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "cypress run",
+    "merge:json" : "yarn --silent mochawesome-merge ./cypress/results/report/*.json > ./cypress/results/mochawesome.json",
+    "generate:report" : "yarn --silent marge ./cypress/results/mochawesome.json -o ./cypress/results && rm -rf cypress/results/report",
+    "move:report" : "mv cypress/results/mochawesome.html cypress/results/index.html",
+    "report": "yarn merge:json && yarn generate:report && yarn move:report"
   },
   "author": "",
   "license": "ISC",
