--- a/package.json
+++ b/package.json
@@ -5,9 +5,9 @@
   "main": "index.js",
   "scripts": {
     "test": "cypress run",
-    "merge:json" : "yarn --silent mochawesome-merge ./cypress/results/report/*.json > ./cypress/results/mochawesome.json",
-    "generate:report" : "yarn --silent marge ./cypress/results/mochawesome.json -o ./cypress/results && rm -rf cypress/results/report",
-    "move:report" : "mv cypress/results/mochawesome.html cypress/results/index.html",
+    "merge:json": "yarn --silent mochawesome-merge ./cypress/results/report/*.json > ./cypress/results/mochawesome.json",
+    "generate:report": "yarn --silent marge ./cypress/results/mochawesome.json -o ./cypress/results && rm -rf cypress/results/report",
+    "move:report": "mv cypress/results/mochawesome.html cypress/results/index.html",
     "report": "yarn merge:json && yarn generate:report && yarn move:report"
   },
   "author": "",
@@ -18,6 +18,7 @@
     "webpack": "^5.21.2"
   },
   "devDependencies": {
+    "@types/node": "^14.14.25",
     "cypress-multi-reporters": "^1.4.0",
     "mocha-junit-reporter": "^2.0.0",
     "mochawesome": "^6.2.1",
