--- a/package.json
+++ b/package.json
@@ -5,20 +5,21 @@
   "main": "index.js",
   "scripts": {
     "test": "cypress run",
-    "merge:json": "yarn --silent mochawesome-merge ./cypress/results/report/*.json > ./cypress/results/mochawesome.json",
-    "generate:report": "yarn --silent marge ./cypress/results/mochawesome.json -o ./cypress/results && rm -rf cypress/results/report",
+    "merge:json": "npx --silent mochawesome-merge ./cypress/results/report/*.json > ./cypress/results/mochawesome.json",
+    "generate:report": "npx --silent marge ./cypress/results/mochawesome.json -o ./cypress/results && rm -rf cypress/results/report",
     "move:report": "mv cypress/results/mochawesome.html cypress/results/index.html",
-    "report": "yarn merge:json && yarn generate:report && yarn move:report"
+    "report": "npx merge:json && yarn generate:report && npm move:report"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
     "@bahmutov/add-typescript-to-cypress": "^2.1.2",
-    "cypress": "^6.4.0",
     "webpack": "^5.21.2"
   },
   "devDependencies": {
+    "@cypress/webpack-preprocessor": "^5.11.1",
     "@types/node": "^14.14.25",
+    "cypress": "^9.6.0",
     "cypress-multi-reporters": "^1.4.0",
     "mocha-junit-reporter": "^2.0.0",
     "mochawesome": "^6.2.1",
