--- a/package.json
+++ b/package.json
@@ -8,7 +8,10 @@
     "merge:json": "npx --silent mochawesome-merge ./cypress/results/report/*.json > ./cypress/results/mochawesome.json",
     "generate:report": "npx --silent marge ./cypress/results/mochawesome.json -o ./cypress/results && rm -rf cypress/results/report",
     "move:report": "mv cypress/results/mochawesome.html cypress/results/index.html",
-    "report": "npx merge:json && yarn generate:report && npm move:report"
+    "lint": "eslint cypress --fix",
+    "lint:check": "eslint cypress --color",
+    "prettier": "prettier --write ./cypress/**/*.ts",
+    "prettier:check": "prettier --list-different ./cypress/**/*.ts"
   },
   "author": "",
   "license": "ISC",
@@ -21,10 +24,12 @@
     "@types/node": "^14.14.25",
     "cypress": "^9.6.0",
     "cypress-multi-reporters": "^1.4.0",
+    "eslint-plugin-cypress": "^2.12.1",
     "mocha-junit-reporter": "^2.0.0",
     "mochawesome": "^6.2.1",
     "mochawesome-merge": "^4.2.0",
     "mochawesome-report-generator": "^5.1.0",
+    "prettier": "2.6.2",
     "typescript": "^4.1.4"
   }
 }
